clusters/workload/core/cilium/manifests/internal-gw.yaml
---
# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/gateway.networking.k8s.io/gateway_v1.json
apiVersion: gateway.networking.k8s.io/v1beta1
kind: Gateway
metadata:
  name: internal
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
spec:
  gatewayClassName: cilium
  listeners:
    - name: http
      protocol: HTTP
      port: 80
    - name: https-rook
      protocol: HTTPS
      port: 443
      hostname: "rook.kharnox.com"
      tls:
        mode: Terminate
        certificateRefs:
          - kind: Secret
            name: tls-secret-rook
      allowedRoutes:
          namespaces:
            from: All
    - name: https-prometheus
      protocol: HTTPS
      port: 443
      hostname: "prometheus.kharnox.com"
      tls:
        mode: Terminate
        certificateRefs:
          - kind: Secret
            name: tls-secret-prometheus
      allowedRoutes:
        namespaces:
          from: All
    - name: https-alertmanager
      protocol: HTTPS
      port: 443
      hostname: "alertmanager.kharnox.com"
      tls:
        mode: Terminate
        certificateRefs:
          - kind: Secret
            name: tls-secret-alertmanager
      allowedRoutes:
        namespaces:
          from: All
    - name: https-grafana
      protocol: HTTPS
      port: 443
      hostname: "grafana.kharnox.com"
      tls:
        mode: Terminate
        certificateRefs:
          - kind: Secret
            name: tls-secret-grafana
      allowedRoutes:
        namespaces:
          from: All
    - name: https-ha
      protocol: HTTPS
      port: 443
      hostname: "ha.kharnox.com"
      tls:
        mode: Terminate
        certificateRefs:
          - kind: Secret
            name: tls-secret-ha
      allowedRoutes:
        namespaces:
          from: All
    - name: https-node-red
      protocol: HTTPS
      port: 443
      hostname: "node-red.kharnox.com"
      tls:
        mode: Terminate
        certificateRefs:
          - kind: Secret
            name: tls-secret-node-red
      allowedRoutes:
        namespaces:
          from: All
    - name: https-mealie
      protocol: HTTPS
      port: 443
      hostname: "mealie.kharnox.com"
      tls:
        mode: Terminate
        certificateRefs:
          - kind: Secret
            name: tls-secret-mealie
      allowedRoutes:
        namespaces:
          from: All
    - name: https-paperless
      protocol: HTTPS
      port: 443
      hostname: "paperless.kharnox.com"
      tls:
        mode: Terminate
        certificateRefs:
          - kind: Secret
            name: tls-secret-paperless
      allowedRoutes:
        namespaces:
          from: All
    - name: https-adguard
      protocol: HTTPS
      port: 443
      hostname: "adguard.kharnox.com"
      tls:
        mode: Terminate
        certificateRefs:
          - kind: Secret
            name: tls-secret-adguard
      allowedRoutes:
        namespaces:
          from: All
    - name: https-wg
      protocol: HTTPS
      port: 443
      hostname: "wg.kharnox.com"
      tls:
        mode: Terminate
        certificateRefs:
          - kind: Secret
            name: tls-secret-wg
      allowedRoutes:
        namespaces:
          from: All
    - name: https-donetick
      protocol: HTTPS
      port: 443
      hostname: "dt.kharnox.com"
      tls:
        mode: Terminate
        certificateRefs:
          - kind: Secret
            name: tls-secret-donetick
      allowedRoutes:
        namespaces:
          from: All
    - name: https-hubble
      protocol: HTTPS
      port: 443
      hostname: "hubble.kharnox.com"
      tls:
        mode: Terminate
        certificateRefs:
          - kind: Secret
            name: tls-secret-hubble
      allowedRoutes:
        namespaces:
          from: All
