clusters/workload/core/cilium/manifests/hubble-route.yaml
---
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: hubble
  namespace: kube-system
spec:
  parentRefs:
    - name: internal
      sectionName: https-hubble
  hostnames:
    - hubble.kharnox.com
  rules:
    - backendRefs:
        - name: hubble-ui
          port: 80
